--- a/scss/layout/_media-boda320.scss
+++ b/scss/layout/_media-boda320.scss
@@ -11,12 +11,19 @@
         height: 250px;
     }
     .casados-mirandose{
-        width: 310px;
-        height: 560px;
+        align-self: center;
+        width: 290px;
+        height: 480px;
     }
     .mujer-mirandomarido{
+        align-self: center;
         width: 270px;
         height: 270px;
+    }
+    .pareja-civil{
+        align-self: center;
+        width: 290px;
+        height: 230px;
     }
 }
 }
