--- a/scss/layout/_media-boda375.scss
+++ b/scss/layout/_media-boda375.scss
@@ -5,9 +5,15 @@
         width:350px;
         height: 280px;
     }
+    .casados-mirandose{
+        align-self: center;
+        width: 300px;
+        height: 500px;
+    }
     .pareja-civil{
-        width: 360px;
-        height: 270px;
+        align-self: center;
+        width: 340px;
+        height: 250px;
     }
 }
 }
