--- a/scss/layout/_media-boda425.scss
+++ b/scss/layout/_media-boda425.scss
@@ -10,18 +10,21 @@
         align-self: center;
     }
     .casados-mirandose{
+        align-self: center;
         width: 350px;
-        height: 600px;
+        height: 550px;
     }
     .mujer-mirandomarido{
+        align-items: center;
         width: 300px;
         height: 300px;
     }
     .pareja-civil{
         align-self: center;
+        margin-left: 20px;
         padding-left: 20px;
-        width: 410px;
-        height: 290px;
+        width: 400px;
+        height: 280px;
     }
     }
     }
