--- a/scss/layout/_media-contenido375.scss
+++ b/scss/layout/_media-contenido375.scss
@@ -6,30 +6,45 @@
                 margin-bottom: 15px;
                 width: 180px;
                 height: 180px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-2{
                 align-self: center;
                 margin-bottom: 15px;
                 width: 180px;
                 height: 180px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-3{
                 align-self: center;
                 margin-bottom: 15px;
                 width: 180px;
                 height: 180px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-4{
                 align-self: center;
                 margin-bottom: 15px;
                 width: 180px;
                 height: 180px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-5{
                 align-self: center;
                 margin-bottom: 15px;
                 width: 180px;
                 height: 180px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
         }
 }
