--- a/scss/layout/_media-contenido768.scss
+++ b/scss/layout/_media-contenido768.scss
@@ -4,22 +4,37 @@
             .marca-1{
                 width: 330px;
                 height: 330px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-2{
                 width: 330px;
                 height: 330px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-3{
                 width: 330px;
                 height: 330px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-4{
                 width: 330px;
                 height: 330px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-5{
                 width: 330px;
                 height: 330px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
         }
     }
