--- a/css/style.css
+++ b/css/style.css
@@ -1100,26 +1100,40 @@ p {
   .galeria-1 .img-index .corazon-embarazada {
     width: 210px;
     height: 360px; }
+    .galeria-1 .img-index .corazon-embarazada:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .mujeres-beso {
     width: 320px;
     height: 430px; }
+    .galeria-1 .img-index .mujeres-beso:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .mujer-mirando {
     width: 150px;
     height: 180px; }
+    .galeria-1 .img-index .mujer-mirando:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .hombre-nene {
     width: 420px;
     height: 90px;
     display: flex;
     align-self: center; }
+    .galeria-1 .img-index .hombre-nene:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .pareja-byn {
     width: 340px;
     height: 135px; }
+    .galeria-1 .img-index .pareja-byn:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .familia-feliz {
     width: 215px;
     height: 345px; }
+    .galeria-1 .img-index .familia-feliz:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .nene-sonriendo1 {
     width: 180px;
     height: 510px; }
+    .galeria-1 .img-index .nene-sonriendo1:hover {
+      transform: scale(1.05); }
   .footerConsulta {
     font-size: 19px; } }
 
@@ -1132,35 +1146,49 @@ p {
     width: 200px;
     height: 340px;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .corazon-embarazada:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .mujeres-beso {
     width: 290px;
     height: 390px;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .mujeres-beso:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .mujer-mirando {
     width: 150px;
     height: 180px;
     display: flex;
     align-self: center;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .mujer-mirando:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .hombre-nene {
     width: 370px;
     height: 80px;
     display: flex;
     align-self: center;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .hombre-nene:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .pareja-byn {
     width: 320px;
     height: 115px;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .pareja-byn:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .familia-feliz {
     width: 200px;
     height: 310px;
     display: flex;
     align-self: center;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .familia-feliz:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .nene-sonriendo1 {
     width: 180px;
-    height: 480px; } }
+    height: 480px; }
+    .galeria-1 .img-index .nene-sonriendo1:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 375px) {
   .headerFormulario h1 {
@@ -1171,39 +1199,53 @@ p {
     width: 180px;
     height: 300px;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .corazon-embarazada:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .mujeres-beso {
     width: 260px;
     height: 360px;
     margin-bottom: 15px;
     display: flex;
     align-self: center; }
+    .galeria-1 .img-index .mujeres-beso:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .mujer-mirando {
     width: 150px;
     height: 180px;
     display: flex;
     align-self: center;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .mujer-mirando:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .hombre-nene {
     width: 320px;
     height: 70px;
     display: flex;
     align-self: center;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .hombre-nene:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .pareja-byn {
     width: 290px;
     height: 115px;
     margin-bottom: 15px;
     display: flex;
     align-self: center; }
+    .galeria-1 .img-index .pareja-byn:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .familia-feliz {
     width: 200px;
     height: 310px;
     display: flex;
     align-self: center;
     margin-bottom: 15px; }
+    .galeria-1 .img-index .familia-feliz:hover {
+      transform: scale(1.05); }
   .galeria-1 .img-index .nene-sonriendo1 {
     width: 180px;
-    height: 450px; } }
+    height: 450px; }
+    .galeria-1 .img-index .nene-sonriendo1:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 320px) {
   .galeria-1 .img-index .hombre-nene {
@@ -1225,17 +1267,25 @@ p {
   .galeria-book .img-book .hombre-panza {
     width: 320px;
     height: 720px; }
+    .galeria-book .img-book .hombre-panza:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .pareja-mirandose {
     width: 400px;
     height: 300px; }
+    .galeria-book .img-book .pareja-mirandose:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .mujer-panza {
     margin-top: 15px;
     width: 420px;
     height: 700px;
     margin-bottom: 15px; }
+    .galeria-book .img-book .mujer-panza:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .pareja-mano {
     width: 380px;
-    height: 380px; } }
+    height: 380px; }
+    .galeria-book .img-book .pareja-mano:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 894px) {
   .galeria-book .img-book {
@@ -1276,20 +1326,28 @@ p {
       margin-bottom: 15px;
       width: 300px;
       height: 600px; }
+      .galeria-book .img-book .hombre-panza:hover {
+        transform: scale(1.05); }
     .galeria-book .img-book .pareja-mirandose {
       display: flex;
       align-self: flex-end;
       margin-bottom: 15px; }
+      .galeria-book .img-book .pareja-mirandose:hover {
+        transform: scale(1.05); }
     .galeria-book .img-book .mujer-panza {
       display: flex;
       align-self: flex-start;
       margin-bottom: 15px;
       width: 350px;
       height: 580px; }
+      .galeria-book .img-book .mujer-panza:hover {
+        transform: scale(1.05); }
     .galeria-book .img-book .pareja-mano {
       display: flex;
       align-self: flex-end;
-      margin-bottom: 15px; } }
+      margin-bottom: 15px; }
+      .galeria-book .img-book .pareja-mano:hover {
+        transform: scale(1.05); } }
 
 @media (max-width: 520px) {
   .galeria-book .img-book {
@@ -1321,31 +1379,47 @@ p {
   .galeria-book .img-book .hombre-panza {
     width: 250px;
     height: 520px; }
+    .galeria-book .img-book .hombre-panza:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .mujer-panza {
     width: 310px;
-    height: 520px; } }
+    height: 520px; }
+    .galeria-book .img-book .mujer-panza:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 375px) {
   .galeria-book .img-book .pareja-mirandose {
     width: 300px;
     height: 230px; }
+    .galeria-book .img-book .pareja-mirandose:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .mujer-panza {
     width: 280px;
     height: 480px; }
+    .galeria-book .img-book .mujer-panza:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .pareja-mano {
     width: 300px;
-    height: 300px; } }
+    height: 300px; }
+    .galeria-book .img-book .pareja-mano:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 320px) {
   .galeria-book .img-book .pareja-mirandose {
     width: 270px;
     height: 190px; }
+    .galeria-book .img-book .pareja-mirandose:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .mujer-panza {
     width: 250px;
     height: 420px; }
+    .galeria-book .img-book .mujer-panza:hover {
+      transform: scale(1.05); }
   .galeria-book .img-book .pareja-mano {
     width: 270px;
-    height: 270px; } }
+    height: 270px; }
+    .galeria-book .img-book .pareja-mano:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 1024px) {
   .container-1 .main-section .navBar2 li {
@@ -1356,10 +1430,16 @@ p {
     margin: 0; }
     .galeria-boda .img-boda .casados-mirandose {
       margin-bottom: 20px; }
+      .galeria-boda .img-boda .casados-mirandose:hover {
+        transform: scale(1.05); }
     .galeria-boda .img-boda .mujer-mirandomarido {
       margin-bottom: 20px; }
+      .galeria-boda .img-boda .mujer-mirandomarido:hover {
+        transform: scale(1.05); }
     .galeria-boda .img-boda .pareja-civil {
-      margin-top: 15px; } }
+      margin-top: 15px; }
+      .galeria-boda .img-boda .pareja-civil:hover {
+        transform: scale(1.05); } }
 
 @media (max-width: 992px) {
   .container-1 .main-section .navBar2 li {
@@ -1441,19 +1521,27 @@ p {
       display: flex;
       align-self: flex-end;
       width: 580px; }
+      .container-1 .galeria-boda .img-boda .familia-libreta:hover {
+        transform: scale(1.05); }
     .container-1 .galeria-boda .img-boda .casados-mirandose {
       display: flex;
       align-self: center;
       margin-bottom: 20px; }
+      .container-1 .galeria-boda .img-boda .casados-mirandose:hover {
+        transform: scale(1.05); }
     .container-1 .galeria-boda .img-boda .mujer-mirandomarido {
       display: flex;
       align-self: center;
       margin-bottom: 20px; }
+      .container-1 .galeria-boda .img-boda .mujer-mirandomarido:hover {
+        transform: scale(1.05); }
     .container-1 .galeria-boda .img-boda .pareja-civil {
       display: flex;
       align-self: flex-start;
       width: 650px;
-      margin-left: 20px; } }
+      margin-left: 20px; }
+      .container-1 .galeria-boda .img-boda .pareja-civil:hover {
+        transform: scale(1.05); } }
 
 @media (max-width: 768px) and (max-width: 744px) {
   .container-1 .main-section {
@@ -1602,24 +1690,32 @@ p {
       height: 300px;
       align-self: center; }
     .galeria-boda .img-boda .casados-mirandose {
+      align-self: center;
       width: 350px;
-      height: 600px; }
+      height: 550px; }
     .galeria-boda .img-boda .mujer-mirandomarido {
+      align-items: center;
       width: 300px;
       height: 300px; }
     .galeria-boda .img-boda .pareja-civil {
       align-self: center;
+      margin-left: 20px;
       padding-left: 20px;
-      width: 410px;
-      height: 290px; } }
+      width: 400px;
+      height: 280px; } }
 
 @media (max-width: 375px) {
   .galeria-boda .img-boda .familia-libreta {
     width: 350px;
     height: 280px; }
+  .galeria-boda .img-boda .casados-mirandose {
+    align-self: center;
+    width: 300px;
+    height: 500px; }
   .galeria-boda .img-boda .pareja-civil {
-    width: 360px;
-    height: 270px; } }
+    align-self: center;
+    width: 340px;
+    height: 250px; } }
 
 @media (max-width: 320px) {
   .descripcion-boda p {
@@ -1628,11 +1724,17 @@ p {
     width: 315px;
     height: 250px; }
   .galeria-boda .img-boda .casados-mirandose {
-    width: 310px;
-    height: 560px; }
+    align-self: center;
+    width: 290px;
+    height: 480px; }
   .galeria-boda .img-boda .mujer-mirandomarido {
+    align-self: center;
     width: 270px;
-    height: 270px; } }
+    height: 270px; }
+  .galeria-boda .img-boda .pareja-civil {
+    align-self: center;
+    width: 290px;
+    height: 230px; } }
 
 @media (max-width: 1024px) {
   .container-1 .main-section .navBar2 li {
@@ -1816,16 +1918,14 @@ p {
       flex-direction: column;
       align-items: center;
       background-color: #ebdfc1; }
-  .galeria-eventos .img-eventos {
-    background-color: #C2B8A3; }
-    .galeria-eventos .img-eventos .nene-sonriendo {
-      align-self: center;
-      width: 320px;
-      height: 320px; }
-    .galeria-eventos .img-eventos .familia-sonriendo {
-      align-self: center;
-      width: 420px;
-      height: 200px; } }
+  .galeria-eventos .img-eventos .nene-sonriendo {
+    align-self: center;
+    width: 320px;
+    height: 320px; }
+  .galeria-eventos .img-eventos .familia-sonriendo {
+    align-self: center;
+    width: 420px;
+    height: 200px; } }
 
 @media (max-width: 520px) {
   .galeria-eventos .img-eventos .nene-sonriendo {
@@ -1860,29 +1960,45 @@ p {
   .galeria-eventos .img-eventos .nene-sonriendo {
     width: 290px;
     height: 290px; }
+    .galeria-eventos .img-eventos .nene-sonriendo:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .familia-sonriendo {
     width: 370px;
     height: 170px; }
+    .galeria-eventos .img-eventos .familia-sonriendo:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .nene-mama {
     width: 290px;
     height: 370px; }
+    .galeria-eventos .img-eventos .nene-mama:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .nene-boca {
     width: 320px;
-    height: 400px; } }
+    height: 400px; }
+    .galeria-eventos .img-eventos .nene-boca:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 375px) {
   .galeria-eventos .img-eventos .nene-sonriendo {
     width: 250px;
     height: 250px; }
+    .galeria-eventos .img-eventos .nene-sonriendo:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .familia-sonriendo {
     width: 300px;
     height: 130px; }
+    .galeria-eventos .img-eventos .familia-sonriendo:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .nene-mama {
     width: 280px;
     height: 350px; }
+    .galeria-eventos .img-eventos .nene-mama:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .nene-boca {
     width: 250px;
-    height: 320px; } }
+    height: 320px; }
+    .galeria-eventos .img-eventos .nene-boca:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 320px) {
   .descripcion-eventos p {
@@ -1890,15 +2006,23 @@ p {
   .descripcion-eventos .galeria-eventos .img-eventos .nene-sonriendo {
     width: 220px;
     height: 220px; }
+    .descripcion-eventos .galeria-eventos .img-eventos .nene-sonriendo:hover {
+      transform: scale(1.05); }
   .descripcion-eventos .galeria-eventos .img-eventos .familia-sonriendo {
     width: 290px;
     height: 120px; }
+    .descripcion-eventos .galeria-eventos .img-eventos .familia-sonriendo:hover {
+      transform: scale(1.05); }
   .descripcion-eventos .galeria-eventos .img-eventos .nene-mama {
     width: 210px;
     height: 310px; }
+    .descripcion-eventos .galeria-eventos .img-eventos .nene-mama:hover {
+      transform: scale(1.05); }
   .descripcion-eventos .galeria-eventos .img-eventos .nene-boca {
     width: 230px;
-    height: 290px; } }
+    height: 290px; }
+    .descripcion-eventos .galeria-eventos .img-eventos .nene-boca:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 880px) {
   .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
@@ -1938,18 +2062,28 @@ p {
   .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
     width: 330px;
     height: 330px; }
+    .galeria-contenido .img-contenido .marca-1:hover, .galeria-contenido .img-contenido .marca-3:hover, .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
     width: 330px;
     height: 330px; }
+    .galeria-contenido .img-contenido .marca-2:hover, .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-3 {
     width: 330px;
     height: 330px; }
+    .galeria-contenido .img-contenido .marca-3:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-4 {
     width: 330px;
     height: 330px; }
+    .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-5 {
     width: 330px;
-    height: 330px; } }
+    height: 330px; }
+    .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 650px) {
   ain-section {
@@ -2043,48 +2177,68 @@ p {
     margin-bottom: 15px;
     width: 180px;
     height: 180px; }
+    .galeria-contenido .img-contenido .marca-1:hover, .galeria-contenido .img-contenido .marca-3:hover, .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
     align-self: center;
     margin-bottom: 15px;
     width: 180px;
     height: 180px; }
+    .galeria-contenido .img-contenido .marca-2:hover, .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-3 {
     align-self: center;
     margin-bottom: 15px;
     width: 180px;
     height: 180px; }
+    .galeria-contenido .img-contenido .marca-3:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-4 {
     align-self: center;
     margin-bottom: 15px;
     width: 180px;
     height: 180px; }
+    .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-5 {
     align-self: center;
     margin-bottom: 15px;
     width: 180px;
-    height: 180px; } }
+    height: 180px; }
+    .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 320px) {
   .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
     margin-bottom: 15px;
     width: 150px;
     height: 150px; }
+    .galeria-contenido .img-contenido .marca-1:hover, .galeria-contenido .img-contenido .marca-3:hover, .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
     margin-bottom: 15px;
     width: 150px;
     height: 150px; }
+    .galeria-contenido .img-contenido .marca-2:hover, .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-3 {
     margin-bottom: 15px;
     width: 150px;
     height: 150px; }
+    .galeria-contenido .img-contenido .marca-3:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-4 {
     margin-bottom: 15px;
     width: 150px;
     height: 150px; }
+    .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-5 {
     margin-bottom: 15px;
     width: 150px;
-    height: 150px; } }
+    height: 150px; }
+    .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 1024px) {
   .container-contacto .main-contacto .navBarContacto li {
