--- a/scss/layout/_media-book425.scss
+++ b/scss/layout/_media-book425.scss
@@ -4,10 +4,16 @@
     .hombre-panza{
         width: 250px;
         height: 520px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .mujer-panza{
         width: 310px;
         height: 520px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
 }
 }
