--- a/scss/layout/_media-contenido320.scss
+++ b/scss/layout/_media-contenido320.scss
@@ -6,26 +6,41 @@
             margin-bottom: 15px;
             width: 150px;
             height: 150px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-2{
             margin-bottom: 15px;
             width: 150px;
             height: 150px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-3{
             margin-bottom: 15px;
             width: 150px;
             height: 150px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-4{
             margin-bottom: 15px;
             width: 150px;
             height: 150px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-5{
             margin-bottom: 15px;
             width: 150px;
             height: 150px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
     }
 }
