--- a/scss/layout/_media-eventos320.scss
+++ b/scss/layout/_media-eventos320.scss
@@ -8,18 +8,30 @@
     .nene-sonriendo{
         width: 220px;
         height: 220px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .familia-sonriendo{
         width: 290px;
         height: 120px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .nene-mama{
         width: 210px;
         height: 310px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .nene-boca{
         width: 230px;
         height: 290px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
 }
 }
