--- a/scss/layout/_media-eventos375.scss
+++ b/scss/layout/_media-eventos375.scss
@@ -4,18 +4,30 @@
     .nene-sonriendo{
         width: 250px;
         height: 250px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .familia-sonriendo{
         width: 300px;
         height: 130px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .nene-mama{
         width: 280px;
         height: 350px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .nene-boca{
         width: 250px;
         height: 320px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
 }
 }
