--- a/scss/layout/_media-contenido1024.scss
+++ b/scss/layout/_media-contenido1024.scss
@@ -5,22 +5,37 @@
             .marca-1{
                 width: 420px;
                 height: 420px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-2{
                 width: 420px;
                 height: 420px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-3{
                 width: 420px;
                 height: 420px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-4{
                 width: 420px;
                 height: 420px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
             .marca-5{
                 width: 420px;
                 height: 420px;
+                &:hover{
+                    transform: scale(1.05);
+                }
             }
         }
 }
