--- a/scss/layout/_media-eventos768.scss
+++ b/scss/layout/_media-eventos768.scss
@@ -155,11 +155,17 @@
         align-self: center;
         width: 320px;
         height: 320px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     .familia-sonriendo{
         align-self: center;
         width: 420px;
         height: 200px;
+        &:hover{
+            transform: scale(1.05);
+        }
     }
     }
 }
