--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*variables: espacio de memoria reservado para alojar un valor de una propiedad*/
+@import url("https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Roboto:ital,wght@0,100;0,400;1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -233,7 +234,7 @@ h3 {
     .footer-section .footer-iconos .whatsapp-1 {
       position: fixed;
       bottom: 1px;
-      right: 67px; }
+      right: 68px; }
       .footer-section .footer-iconos .whatsapp-1:hover {
         transform: scale(1.05); }
     .footer-section .footer-iconos .gmail-1 {
@@ -1922,10 +1923,14 @@ p {
     align-self: center;
     width: 320px;
     height: 320px; }
+    .galeria-eventos .img-eventos .nene-sonriendo:hover {
+      transform: scale(1.05); }
   .galeria-eventos .img-eventos .familia-sonriendo {
     align-self: center;
     width: 420px;
-    height: 200px; } }
+    height: 200px; }
+    .galeria-eventos .img-eventos .familia-sonriendo:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 520px) {
   .galeria-eventos .img-eventos .nene-sonriendo {
@@ -2028,18 +2033,28 @@ p {
   .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
     width: 420px;
     height: 420px; }
+    .galeria-contenido .img-contenido .marca-1:hover, .galeria-contenido .img-contenido .marca-3:hover, .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
     width: 420px;
     height: 420px; }
+    .galeria-contenido .img-contenido .marca-2:hover, .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-3 {
     width: 420px;
     height: 420px; }
+    .galeria-contenido .img-contenido .marca-3:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-4 {
     width: 420px;
     height: 420px; }
+    .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-5 {
     width: 420px;
-    height: 420px; } }
+    height: 420px; }
+    .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 790px) {
   .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
@@ -2154,22 +2169,32 @@ p {
     margin-bottom: 15px;
     width: 200px;
     height: 200px; }
+    .galeria-contenido .img-contenido .marca-1:hover, .galeria-contenido .img-contenido .marca-3:hover, .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
     margin-bottom: 15px;
     width: 200px;
     height: 200px; }
+    .galeria-contenido .img-contenido .marca-2:hover, .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-3 {
     margin-bottom: 15px;
     width: 200px;
     height: 200px; }
+    .galeria-contenido .img-contenido .marca-3:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-4 {
     margin-bottom: 15px;
     width: 200px;
     height: 200px; }
+    .galeria-contenido .img-contenido .marca-4:hover {
+      transform: scale(1.05); }
   .galeria-contenido .img-contenido .marca-5 {
     margin-bottom: 15px;
     width: 200px;
-    height: 200px; } }
+    height: 200px; }
+    .galeria-contenido .img-contenido .marca-5:hover {
+      transform: scale(1.05); } }
 
 @media (max-width: 375px) {
   .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
