--- a/scss/layout/_media-contenido425.scss
+++ b/scss/layout/_media-contenido425.scss
@@ -10,26 +10,41 @@
             margin-bottom: 15px;
             width: 200px;
             height: 200px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-2{
             margin-bottom: 15px;
             width: 200px;
             height: 200px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-3{
             margin-bottom: 15px;
             width: 200px;
             height: 200px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-4{
             margin-bottom: 15px;
             width: 200px;
             height: 200px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
         .marca-5{
             margin-bottom: 15px;
             width: 200px;
             height: 200px;
+            &:hover{
+                transform: scale(1.05);
+            }
         }
     }
 }
