--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "./utilities/variables";
 @import "./utilities/mixin";
 @import "scss./base/resets";
+@import "./base/tipografias";
 @import "./layout/header-index";
 @import "./layout/main-index";
 @import "./scss/layout/footer-index";
