--- a/css/style.css
+++ b/css/style.css
@@ -1023,6 +1023,8 @@ p {
     .section-index .descripcion-index .fotoFlor {
       width: 270px;
       height: 220px; }
+      .section-index .descripcion-index .fotoFlor:hover {
+        transform: scale(1.05); }
   .footerConsulta {
     font-size: 20px; }
   .footer-section .footerBsas p {
